2013-01-15  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(ICEDTEA_PATCHES): Add patch when building
	with PaX.
	* patches/pax-mark-rmic-java.patch:
	PaX mark output directory before running just-built
	rmic.

2013-06-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_WITH_HOTSPOT_BUILD): Define once.
	* configure.ac: Drop IT_ENABLE_ZERO_BUILD; called
	by IT_WITH_HOTSPOT_BUILD.

2013-09-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_CHECK_FOR_LCMS): Make error message mention
	version.

2013-09-10  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(BUILD_VERSION): Renamed from OPENJDK_VERSION.
	(COMBINED_VERSION): Use BUILD_VERSION.
	(ICEDTEA_ENV): Likewise.
	(dist-openjdk): Should really use COMBINED_VERSION.
	(dist-openjdk-fsg): Likewise.
	(dist-openjdk-fsg-tz): Additional target which
	makes an xz tarball instead of a zip (for Jiri ;)

2013-09-09  Andrew John Hughes  <gnu.andrew@redhat.com>

	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Add -D_LITTLE_ENDIAN to arm
	and support arm64|aarch64.
	(IT_ENABLE_ZERO_BUILD): Explicitly set ZERO_BITSPERWORD
	for aarch64, alpha, arm, ia64 && sh.  Replace sparc64 with
	sparcv9 which is what INSTALL_ARCH_DIR is set to.

2013-08-30  Andrew John Hughes  <gnu.andrew@redhat.com>

	* INSTALL: Update with --enable-system-kerberos
	option.
	* Makefile.am:
	(ICEDTEA_ENV): Set SYSTEM_KRB5, KRB5_LIBS
	and KRB5_CFLAGS.
	* acinclude.m4:
	(IT_CHECK_FOR_KERBEROS): Add --enable-system-kerberos
	option (on by default) which checks for libkrb5 and
	the krb5.h header.
	* configure.ac: Invoke IT_CHECK_FOR_KERBEROS.

2013-07-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_CHECK_FOR_LCMS): Turn system LCMS on by
	default if the version is 2.5 or above with the
	latest security fixes.

2013-09-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(OPENJDK_VERSION): Set to b00.
	(JDK_UPDATE_VERSION): Set to 60.