@@ -67,6 +67,8 @@ STAGE1_BOOT_DIR = $(abs_top_builddir)/bootstrap/boot
 STAGE2_BOOT_DIR = $(abs_top_builddir)/bootstrap/icedtea
 JAMVM_IMPORT_PATH = $(abs_top_builddir)/jamvm/install/hotspot
 CRYPTO_CHECK_BUILD_DIR = $(abs_top_builddir)/cryptocheck.build
+STAGE1_BOOT_RUNTIME = $(STAGE1_BOOT_DIR)/jre/lib/rt.jar
+STAGE2_BOOT_RUNTIME = $(STAGE2_BOOT_DIR)/jre/lib/rt.jar
 
 # Source directories
 
@@ -1646,14 +1648,13 @@ endif
 	ln -sf ../../../javap $(STAGE1_BOOT_DIR)/bin/javap
 	mkdir -p $(STAGE1_BOOT_DIR)/lib/modules
 	mkdir -p $(STAGE1_BOOT_DIR)/jre/lib && \
-	cp $(SYSTEM_JDK_DIR)/jre/lib/rt.jar \
-	  $(STAGE1_BOOT_DIR)/jre/lib/rt.jar && \
-	chmod u+w $(STAGE1_BOOT_DIR)/jre/lib/rt.jar
+	cp $(SYSTEM_JDK_DIR)/jre/lib/rt.jar $(STAGE1_BOOT_RUNTIME) && \
+	chmod u+w $(STAGE1_BOOT_RUNTIME)
 	mkdir -p $(STAGE1_BOOT_DIR)/lib && \
 	if [ -e $(SYSTEM_JDK_DIR)/lib/tools.jar ] ; then \
 	  ln -sf $(SYSTEM_JDK_DIR)/lib/tools.jar $(STAGE1_BOOT_DIR)/lib/tools.jar ; \
 	else \
-	  ln -sf $(STAGE1_BOOT_DIR)/jre/lib/rt.jar $(STAGE1_BOOT_DIR)/lib/tools.jar ; \
+	  ln -sf $(STAGE1_BOOT_RUNTIME) $(STAGE1_BOOT_DIR)/lib/tools.jar ; \
 	fi
 	ln -sf $(SYSTEM_JDK_DIR)/jre/lib/$(JRE_ARCH_DIR) \
 	  $(STAGE1_BOOT_DIR)/jre/lib/ && \
@@ -2677,8 +2678,9 @@ stamps/rt.stamp: stamps/rt-class-files.stamp
 	     mkdir -p `dirname $$destpath` ; \
 	     cp -a ../../$$dirs $$destpath ; \
 	   done ; \
-	   $(ZIP) -qur $(STAGE1_BOOT_DIR)/jre/lib/rt.jar \
-	     com java javax sun ); \
+	   if [ -w $(STAGE1_BOOT_RUNTIME) ] ; then \
+	     $(ZIP) -qur $(STAGE1_BOOT_RUNTIME) com java javax sun ; \
+	   fi ; ) \
 	fi
 	mkdir -p stamps
 	touch $@
@@ -2688,7 +2690,8 @@ clean-rt:
 	rm -f stamps/rt-class-files.stamp stamps/rt.stamp
 	rm -f rt-source-files.txt
 	if [ -e $(STAGE1_BOOT_DIR)/jre/lib ] ; then \
-	  cp $(SYSTEM_JDK_DIR)/jre/lib/rt.jar $(STAGE1_BOOT_DIR)/jre/lib ; \
+	  cp $(SYSTEM_JDK_DIR)/jre/lib/rt.jar $(STAGE1_BOOT_RUNTIME) ; \
+	  chmod u+w $(STAGE1_BOOT_RUNTIME) ; \
 	fi
 
 # Crypto Level Check
